NOREF removed maven and other unnecessary dependencies